--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 PORT=7000
 
-MONGODB_URI= http://localhost:27017/testDB
-
+MONGODB_URI= mongodb+srv://vinayrinait:vinay@cluster0.qcgcqfp.mongodb.net/awstest?retryWrites=true&w=majority
 JWT_SECRET = PHOLWALA_TOKEN_ACCESS
 
 PAYMENT_KEY_ID = 'rzp_test_wD0TIN7YJHnwxl'
